updating our details

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
+      <p>I am software developer trying learn new tricks.</p>
+      <h1>I am from miami raised in venezuela</h1>
       <p>Details here...</p>
-      <h1>Where I'm From</h1>
+      <h1>Zumba, Sparten races and spend time with my family.</h1>
       <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
+      <h1>Developing applcation for end user or sports industry</h1>
       <p>Details here...</p>
-      <h1>What's your dream job?</h1>
+      <h1>Woodstock, Ga/h1>
       <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
+      <h1>I love to be part of latest new technolgies and will requier more and more Mobile and web portals.</h1>
       <p>Details here...</p>
     </section>
 
