updating my details

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>Details here...</p>
       <h1>Developing applcation for end user or sports industry</h1>
       <p>Details here...</p>
-      <h1>Woodstock, Ga/h1>
+      <h1>Woodstock , Ga</h1>
       <p>Details here...</p>
       <h1>I love to be part of latest new technolgies and will requier more and more Mobile and web portals.</h1>
       <p>Details here...</p>
